# rflx

./: .env.example  .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml  rag_agent.py  rxconfig.py
docs/: architecture.md  introduction.md  search-quality-plan.md
ingestion/: chunker.py  ingest.py
rflx/: rflx.py
rflx/pages/: chat.py  documents.py  explorer.py  home.py  settings.py
rflx/state/: __init__.py  chat.py  documents.py  explorer.py  home.py  settings.py
sql/: migrate_hybrid_search.sql  schema.sql
tests/: test_search_quality.py
utils/: db_utils.py  models.py  providers.py
